# notebooklm-content-curator

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  STATUS.md  agent_utils.py  config.json  fetch-podcast-transcript.py  ghPAT  ghPAT.pub  notebooklm-content-curator.py  notebooklm-registry.json  prod-agent-chat.py  prod-agent-mail.py  prod-agent-meet.py  prod-agent-notebooklm.py  prod-agent-postcast.py  prod-agent-tasks.py  pyproject.toml  requirements.txt  security-scan.py  settings.json  settings.json.example  setup-auth.py
.claude/agents/: checker-agent.md  documenter-agent.md  environment-agent.md  migration-agent.md  planner-agent.md  project-architect.md  refactoring-specialist.md  security-reviewer.md
backburner/: prod-agent-chat.py  prod-agent-mail.py
docs/: ARCHITECTURE.md  STATUS.md
scripts/: security-scan.py
src/: agent_utils.py  prod-agent-notebooklm.py  prod-agent-podcast.py  prod-agent.py  prod_agent.py  prod_agent_tasks.py  setup-auth.py
src/tools/: __init__.py  tool_meet.py  tool_notebooklm.py  tool_podcast.py
